refactor : simpleJdbcInsert, connect_jdbc 삭제, VARCHAR 크기 조정